--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
     "@types/styled-components": "^5.1.34",
+    "firebase": "^10.13.2",
     "framer-motion": "^11.5.5",
     "icons": "^1.0.0",
     "react": "^18.3.1",
