--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,6 @@
 {
   "projects": {
-    "default": "james-galos-portfolio",
+    "default": "james-portfolio-website-a702b",
     "Continous": "james-galos-portfolio"
   },
   "targets": {},
